fix(kaomoji): don't wrap

--- a/src/styles/kaomoji.scss
+++ b/src/styles/kaomoji.scss
@@ -2,6 +2,7 @@
   padding: 4px var(--padding);
   line-height: 2;
   font-weight: 600;
+  white-space: nowrap;
 
   transition: color 0.2s;
   cursor: pointer;
